# teaching-ir-with-shared-tasks

./: .devcontainer.json  .gitignore  LICENSE  README.md  pyproject.toml  teaching.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  static.yml
browser/: .gitignore  Makefile  index.html  jest.config.js  links.yml  package-lock.json  package.json  process_data.py  tsconfig.json  vite.config.ts
browser/src/: main.ts  utils.ts
browser/src/__tests__/: rest_utility_test.ts
browser/src/components/: ComponentOverview.vue  links.json  utils.ts
browser/src/views/: LandingPage.vue
cli/: __init__.py  __main__.py  guidelines.md  tirex.py
dashboard/: .devcontainer.json  Makefile  README.md  links.yml  vite.config.ts
dashboard/src/: main.ts
dashboard/src/__tests__/: rest_utility_test.ts
dashboard/src/components/: CodeSnippet.vue  ComponentOverview.vue  utils.ts
dashboard/src/views/: LandingPage.vue
data/: README.md  pooling.py
data/sose-2024-jena/: judgment-pool.json  topics.xml
doccano/: .gitignore  irds_doccano.py  pyproject.toml
milestone-02/: .dockerignore  .gitignore  Dockerfile  README.md  pyterrier-bm25.ipynb
milestone-03/: README.md  pyterrier-bm25-rm3.ipynb  pyterrier-bm25-sdm.ipynb  pyterrier-bm25.ipynb  pyterrier-multi-field.ipynb
milestone-03/bm25-output/: run.txt
milestone-03/bm25-rm3-output/: run.txt
milestone-03/bm25-sdm-output/: run.txt
milestone-03/multi-field-output/: run.txt
tutorials/: .devcontainer.json  .gitignore  Dockerfile  README.md  tutorial-01-ir-datasets.ipynb  tutorial-02-stopword-lists.ipynb  tutorial-03-stemming.ipynb  tutorial-04-lemmatization.ipynb  tutorial-05-query-expansion.ipynb  tutorial-06-hyperparameter-tuning.ipynb  tutorial-07-query-segmentation.ipynb  tutorial-08-query-performance-prediction.ipynb  tutorial-09-query-expansion-with-llms.ipynb  tutorial-10-statistical-analysis.ipynb  tutorial-boolean-retrieval.ipynb  tutorial-corpus-graph.ipynb  tutorial-data-access-from-java.ipynb  tutorial-doc-t5-query.ipynb  tutorial-entity-linking-in-progress.ipynb  tutorial-entity-linking.ipynb  tutorial-genre-classification.ipynb  tutorial-hyperparameter-tuning.ipynb  tutorial-ir-datasets.ipynb  tutorial-lemmatization.ipynb  tutorial-medical-classification.ipynb  tutorial-pyterrier-artifacts.ipynb  tutorial-query-expansion-with-llms.ipynb  tutorial-query-expansion.ipynb  tutorial-query-intent-prediction.ipynb  tutorial-query-performance-prediction.ipynb  tutorial-research-medical-classification.ipynb  tutorial-reuse-pyterrier-indices.ipynb  tutorial-spelling-correction.ipynb  tutorial-splade-query-processing.ipynb  tutorial-statistical-analysis.ipynb  tutorial-stemming.ipynb  tutorial-stopword-lists.ipynb  tutorial-tokenization.ipynb  tutorial-tokenizer.ipynb
tutorials/sample-solutions/: tutorial-01-ir-datasets.ipynb  tutorial-02-stopword-lists.ipynb  tutorial-05-query-expansion.ipynb
wise-2023/ir-datasets/: Dockerfile  README.md  longeval-docs.jsonl  longeval_tmp.py  topics-jena.xml  topics-leipzig.xml  topics.xml
wise-2023/ir-datasets/tirex-data/: queries.jsonl  queries.xml
wise-2023/ir-datasets/tirex-data-jena/: qrels.txt  queries.jsonl  queries.xml
wise-2023/pooling/: add-documents-to-pool.py  jena-topics-20231026-test-pool.json  leipzig-topics-20231025-test-pool.json  run_pooling.py
wise-2023/training-data/: docs-heldout.json  docs-long-september.json  docs-short-july.json  docs-training.json  extract-sub-corpora.py  extract-sub-corpora.sh  generate-sub-corpus.py  qrels-heldout.txt  qrels-long-september.txt  qrels-short-july.txt  qrels-training.txt
zenodo/: README.md
