[project]
name = "teaching-ir-with-shared-tasks"
requires-python = ">=3.10"
dependencies = [
    "annotated-types~=0.6.0",
    "click~=8.1",
    # Temporary fix of https://github.com/doccano/doccano-client/issues/158
    "doccano-client @ git+https://github.com/heinrichreimer/doccano-client.git@c36a6284e941f774ed1eafb198933d51fb05caec",
    # "doccano-client~=1.2.8",
    "importlib-metadata~=7.0",
    "ir_datasets~=0.5.6",
    "python-slugify~=8.0",
    "tira~=0.0.125",
    "urllib3~=2.2",
]
version = "0.1.0"

[project.scripts]
teaching-ir = "cli.__main__:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
mypkg = ["*.txt", "*.md", "*.rst"]
