[project]
name = "teaching-ir-with-shared-tasks"
requires-python = ">=3.10"
dependencies = [
    "annotated-types~=0.7.0",
    "cachecontrol[filecache]~=0.14.1",
    "chatnoir-pyterrier~=3.1.2",
    "click~=8.1",
    # Temporary fix of https://github.com/doccano/doccano-client/issues/158
    "doccano-client @ git+https://github.com/janheinrichmerker/doccano-client.git@c36a6284e941f774ed1eafb198933d51fb05caec",
    # "doccano-client~=1.2.8",
    "elasticsearch-dsl~=8.16",
    "ir_datasets~=0.5.6",
    "pandas~=2.2",
    "pyterrier-dr~=0.6.1",
    "pyterrier-t5 @ git+https://github.com/terrierteam/pyterrier_t5.git@8caa9a28e6cd102c8e294a6a01a42a6ff8e41c76",
    "python-slugify~=8.0",
    "python-terrier~=0.13.0",
    "requests~=2.32",
    "tira~=0.0.125",
    "urllib3~=2.2",
    "trectools~=0.0.50",
    "tqdm~=4.66",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "bandit[toml]~=1.7",
    "mypy~=1.5",
    "pandas-stubs~=2.2",
    "pytest~=8.0",
    "pytest-cov~=6.0",
    "ruff~=0.11.7",
    "types-tqdm~=4.66",
]

[project.scripts]
teaching-ir = "cli.__main__:cli"

[build-system]
requires = [
    "setuptools~=75.4",
    "setuptools-scm~=8.0",    
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.rst"]

[tool.setuptools_scm]

[tool.ruff]
exclude = [
    "build",
    "venv",
    ".venv",
]

[tool.mypy]
exclude = [
    "build",
    "venv",
    ".venv",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [
    "build",
    "venv",
    ".venv",
]

[tool.bandit.assert_used]
skips = ["**/test_*.py"]

[tool.pytest.ini_options]
log_cli = "True"
