[project]
name = "teaching-ir-with-shared-tasks"
requires-python = ">=3.10,<4.0"
version = "0.1.0"
dependencies = [
    "annotated-types~=0.7.0",
    "cachecontrol[filecache]~=0.14.1",
    "chatnoir-api~=3.4",
    "chatnoir-pyterrier~=3.3",
    "click~=8.1",
    # Temporary fix of https://github.com/doccano/doccano-client/issues/158
    "doccano-client @ git+https://github.com/janheinrichmerker/doccano-client.git@125476a9f52705665a0f788262fd9ce139d539ae",
    # "doccano-client~=1.2.8",
    "ir_datasets~=0.5.11",
    "pandas~=2.3",
    "pyterrier-dr~=0.6.2",
    "pyterrier-t5~=0.2.1",
    "pyterrier-caching~=0.5.4",
    "python-slugify~=8.0",
    "python-terrier~=0.13.2",
    "requests~=2.32",
    "tira~=0.0.183",
    "urllib3~=2.2",
    "trectools~=0.0.50",
    "tqdm~=4.67",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "bandit[toml]~=1.7",
    "mypy~=1.5",
    "pandas-stubs~=2.3",
    "pytest~=8.0",
    "pytest-cov~=7.0",
    "ruff~=0.14.7",
    "types-tqdm~=4.67",
]

[project.scripts]
teaching-ir = "cli.__main__:cli"

[build-system]
requires = [
    "setuptools~=80.0",
    "setuptools-scm~=9.2",    
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.rst"]

[tool.setuptools_scm]

[tool.ruff]
exclude = [
    "build",
    "venv",
    ".venv",
]

[tool.mypy]
exclude = [
    "build",
    "venv",
    ".venv",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [
    "build",
    "venv",
    ".venv",
]

[tool.bandit.assert_used]
skips = ["**/test_*.py"]

[tool.pytest.ini_options]
log_cli = "True"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

